fixing display issues on small screens

--- a/docs/main.css
+++ b/docs/main.css
@@ -76,7 +76,7 @@ a:hover {
     left: 0;
     top: 0;
     width: 100%;
-    height: 13.5%;
+    height: 115px;
     opacity: 0.04;
     background-image: url('images/atoms.jpeg');
     background-repeat: no-repeat;
